--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "expo": "^35.0.0",
+    "express": "^4.17.1",
     "galio-framework": "^0.6.1",
+    "mysql": "^2.17.1",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
