--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "bluealliance": "^0.9.0",
     "body-parser": "^1.19.0",
     "expo": "^35.0.0",
     "express": "^4.17.1",
@@ -21,6 +22,8 @@
     "react-native-side-menu": "^1.1.3",
     "react-native-web": "^0.11.7",
     "react-sidebar": "^3.0.2",
+    "tba-api-client": "^1.1.1",
+    "tba-api-v3client": "^3.3.1",
     "yarn": "^1.19.1"
   },
   "devDependencies": {
